# hamstring

./: .gitignore  .readthedocs.yml  README.md  config-test.yaml  config.yaml  flake.nix  install_requirements.sh  start-pipeline.sh  test-pipeline.sh
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/workflows/: build_publish_docker.yml  build_test_linux.yml  build_test_macos.yml  build_test_windows.yml  formatting.yml  publish_dev.yml  publish_main.yml  test_coverage.yml
benchmarking/: data_directory_structure.yaml  utils.py
benchmarking/controller/: benchmark_controller.py
benchmarking/test_runner/: benchmark_test_runner.py  plot_generator.py
benchmarking/test_runner/plotting/: boxes.py  metadata_configuration.py  metadata_information.py  pdf_overview_generator.py  plot_generator.py
benchmarking/test_runner/test_types/: base.py  extended.py  main.py
cpp/: BUILD.md  BUILD_STATUS.md  BUILD_SUCCESS.md  CMakeLists.txt  QUICKSTART.md  README.md  SUMMARY.md  auto-build.sh  vcpkg.json
cpp/examples/: CMakeLists.txt  demo.cpp
cpp/include/hamstring/base/: clickhouse_sender.hpp  data_classes.hpp  kafka_handler.hpp  logger.hpp  utils.hpp
cpp/include/hamstring/config/: config.hpp
cpp/include/hamstring/detector/: detector.hpp  detector_service.hpp  feature_extractor.hpp
cpp/include/hamstring/inspector/: anomaly_detector.hpp  inspector.hpp
cpp/include/hamstring/logcollector/: logcollector.hpp
cpp/include/hamstring/logserver/: logserver.hpp
cpp/include/hamstring/prefilter/: prefilter.hpp
cpp/src/: CMakeLists.txt
cpp/src/base/: clickhouse_sender.cpp  data_classes.cpp  kafka_handler.cpp  logger.cpp  utils.cpp
cpp/src/config/: config.cpp
cpp/src/detector/: CMakeLists.txt  detector.cpp  detector_service.cpp  feature_extractor.cpp  main.cpp
cpp/src/inspector/: CMakeLists.txt  anomaly_detector.cpp  inspector.cpp  main.cpp
cpp/src/logcollector/: CMakeLists.txt  README.md  logcollector.cpp  main.cpp
cpp/src/logserver/: CMakeLists.txt  README.md  logserver.cpp  main.cpp
cpp/src/prefilter/: CMakeLists.txt  main.cpp  prefilter.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/base/: CMakeLists.txt  test_utils.cpp
cpp/tests/detector/: CMakeLists.txt  test_feature_extractor.cpp
cpp/tests/integration/: CMakeLists.txt  test_pipeline.cpp
docker/: .env  docker-compose.yml
docker/docker-compose-swarm/: docker-compose.swarm-kafka.yml  docker-compose.swarm-monitoring.yml  docker-compose.swarm-pipeline.yml
docker/docker-compose/base/: docker-compose.clickhouse.yml  docker-compose.grafana.yml  docker-compose.kafka-exporter.yml  docker-compose.kafka.yml  docker-compose.pipeline.yml  docker-compose.prometheus.yml
docker/docker-compose/dev/: docker-compose.monitoring.yml  docker-compose.pipeline.yml  docker-compose.yml
docker/docker-compose/prod/: docker-compose.monitoring.yml  docker-compose.pipeline.yml  docker-compose.yml
docker/dockerfiles/: Dockerfile.alerter  Dockerfile.detector  Dockerfile.zeek
docker/grafana-provisioning/: datasources.yaml
docker/grafana-provisioning/dashboards/: log_volumes.json  overview.json
docs/: DOCKER_TO_NIX.md  NIX_DEPLOYMENT.md  ZEEK_INTEGRATION.md  conf.py  configuration.rst  index.rst  pipeline.rst  usage.rst
requirements/: requirements.detector.txt  requirements.inspector.txt  requirements.train.txt
scripts/: convert_models_to_onnx.py
src/alerter/: alerter.py
src/alerter/plugins/: generic_alerter.py  hello_world_alerter.py
src/base/: kafka_handler.py  logline_handler.py  utils.py
src/detector/: detector.py
src/detector/plugins/: dga_detector.py  domainator_detector.py
src/inspector/: inspector.py
src/inspector/plugins/: stream_ad_inspector.py
src/logcollector/: batch_handler.py  collector.py
src/logserver/: server.py
src/monitoring/: clickhouse_batch_sender.py  monitoring_agent.py
src/prefilter/: prefilter.py
src/train/: dataset.py  feature.py  model.py  train.py
tests/benchmark/: test_base.py  test_interval_based.py  test_single_interval.py
tests/detector/: test_detector.py  test_dga_detector.py  test_domainator_detector.py
tests/inspector/: test_inspector.py  test_no_inspector.py  test_stream_ad_inspector.py
tests/kafka/: test_exactly_once_kafka_consume_handler.py  test_exactly_once_kafka_produce_handler.py  test_kafka_consume_handler.py  test_simple_kafka_consume_handler.py  test_simple_kafka_produce_handler.py
tests/logcollector/: test_batch_handler.py  test_collector.py
tests/logserver/: test_server.py
tests/miscellaneous/: test_marshmallow.py
tests/prefilter/: test_prefilter.py
tests/zeek/: test_zeek_analysis_handler.py  test_zeek_config_handler.py
